--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "geocoder",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8081",
   "dependencies": {
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
+    "downshift": "^3.2.12",
+    "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^0.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
