--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@testing-library/react": "^9.1.3",
+    "axios": "^0.19.0",
     "downshift": "^3.2.12",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "material-ui": "^0.20.2",
     "material-ui-search-bar": "^0.4.2",
     "react": "^16.9.0",
@@ -33,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^6.1.0"
   }
 }
